comments-container create

--- a/practice1.html
+++ b/practice1.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice 1</title>
+    <title>Comments</title>
 </head>
 <body>
-    
+    <header>
+        <h1>User Comments Appear here</h1>
+    </header>
+    <main>
+        <section>
+            <div id="comments-container">
+                
+            </div>
+        </section>
+    </main>
     <script src="js/practise1.js"></script>
 </body>
 </html>
