--- a/practice1.html
+++ b/practice1.html
@@ -5,15 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comments</title>
+    <style>
+        .comment {
+            background-color: darkseagreen;
+            margin: 20px;
+            padding: 10px;
+        }
+        .container {
+            display: grid;
+            grid-template-columns: repeat(2, 1fr);
+        }
+    </style>
 </head>
 <body>
     <header>
-        <h1>User Comments Appear here</h1>
+        <h1>Post Comments</h1>
     </header>
-    <main>
+    <main>   
         <section>
-            <div id="comments-container">
-                
+            <div id="details-container">
+
+            </div>
+        </section>
+        <section>
+            <h1>User Comments Appear here</h1>
+            <div class="container" id="comments-container">
+
             </div>
         </section>
     </main>
