--- a/practice2.html
+++ b/practice2.html
@@ -4,15 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practice 2</title>
+    <title>Random User</title>
 </head>
 <body>
     <header>
-
+        <h1>Hello from Random People..</h1>
     </header>
     <main>
         <section>
+            <div id="user-container">
 
+            </div>
         </section>
     </main>
     <script src="js/practise2.js"></script>
