--- a/practice3.html
+++ b/practice3.html
@@ -5,8 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal db Recap</title>
+    <!-- bootstrap styles -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-    
+    <header>
+        <h1 class="text-center text-warning">Exploring Food</h1>
+    </header>
+    <main>
+        <!-- search meals -->
+        <section class="container text-center my-4">
+            <input class="w-50" type="text" name="" id="search-field">
+            <button onclick="searchFood()" class="btn btn-warning">Search</button>
+        </section>
+        <!-- load meals -->
+        <section class="container">
+            <h3 class="mb-4">My Meals Here</h3>
+            <div id="meals-container" class="row row-cols-1 row-cols-md-3 g-4">
+                
+            </div>
+        </section>
+    </main>
+    <!-- bootstrap script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="js/practice3.js"></script>
 </body>
 </html>
