--- a/practice3.html
+++ b/practice3.html
@@ -13,6 +13,12 @@
         <h1 class="text-center text-warning">Exploring Food</h1>
     </header>
     <main>
+        <!-- meal detail -->
+        <section class="container">
+            <div id="detail-container">
+
+            </div>
+        </section>
         <!-- search meals -->
         <section class="container text-center my-4">
             <input class="w-50" type="text" name="" id="search-field">
@@ -21,8 +27,7 @@
         <!-- load meals -->
         <section class="container">
             <h3 class="mb-4">My Meals Here</h3>
-            <div id="meals-container" class="row row-cols-1 row-cols-md-3 g-4">
-                
+            <div id="meals-container" class="row row-cols-1 row-cols-md-3 g-4">   
             </div>
         </section>
     </main>
